--- a/Doctors_Appointment_Booking_System/.env.prod
+++ b/Doctors_Appointment_Booking_System/.env.prod
@@ -1,6 +1,8 @@
 DJANGO_SECRET_KEY=doctor_prod_secret
 DJANGO_DEBUG=False
-DJANGO_ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,web
+
+DJANGO_SETTINGS_MODULE=core.settings.prod
 
 POSTGRES_DB=doctor_appointment_prod
 POSTGRES_USER=doctor_user_prod
