Add .dockerignore and change .gitignore

--- a/Doctors_Appointment_Booking_System/.env.prod
+++ b/Doctors_Appointment_Booking_System/.env.prod
@@ -1,11 +1,17 @@
-DJANGO_SECRET_KEY=doctor_prod_secret
+# Django secret key
+DJANGO_SECRET_KEY='3kpzc^o+mi#nzabnu+q@^p*ixh0oxz2h=+3l)abtwev+tz!2o#'
+
+# Django settings
 DJANGO_DEBUG=False
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,web
-
 DJANGO_SETTINGS_MODULE=core.settings.prod
 
+
+# Database settings
 POSTGRES_DB=doctor_appointment_prod
 POSTGRES_USER=doctor_user_prod
 POSTGRES_PASSWORD=doctor_password_prod
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
+
+
