--- a/Doctors_Appointment_Booking_System/.env.dev
+++ b/Doctors_Appointment_Booking_System/.env.dev
@@ -1,3 +1,6 @@
-DEBUG=1
-SECRET_KEY=foo
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+# DEBUG=1
+# SECRET_KEY=supersecretkey123
+# DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DEBUG = True
+SECRET_KEY = "supersecretkey123"
+ALLOWED_HOSTS = ["localhost", "127.0.0.1"]
