--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# Enviroment variables
+.env.dev
+.env.prod
+
+
+# idea folder
+.idea/
+.idea_modules/
+*.iws
+*.iml
+*.ipr
